# AIDN

./: .env.example  .env.production  .gitignore  AIDN_CHEAT_SHEET.md  AIDN_SPECIFICATION.md  CLAUDE_INSTRUCTIONS.md  Dockerfile.api  Dockerfile.dashboard  Dockerfile.simple  Dockerfile.voice  Dockerfile.voice-agent  NEXT_SESSION_BRIEFING.md  Procfile  README.md  api_server.py  dashboard_demo.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  prometheus.yml  pyproject.toml  railway.simple.json  railway.voice-agent.json  requirements.txt  sample_leads.csv  simple_api_server.py  simple_dashboard.py  simple_websocket_test.py  test_call.py  test_setup.py  test_simple_call.py  test_ws.py
.cursor/: claude.md
.cursor/commands/: commit.md  evolve.md  execute.md  plan.md  prime.md
.cursor/reference/: .gitkeep  api_rules.md  database_rules.md  deployment_rules.md  frontend_rules.md  monitoring_rules.md  voice_agent_rules.md
docs/: AIDN_ANALYSIS_PROMPT_FINAL.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  DECISION_LOG.md  HOW_TO_CHECK_IF_FILES_ARE_OBSOLETE.md  ISSUES_RESOLVED.md  MIGRATION_PLAN.md  NEXT_SESSION_BRIEFING.md  NEXT_STEPS.md  PRODUCTION_SUMMARY.md  PROJECT_STATUS.md  VIBE_CODING_BEST_PRACTICES.md  VOICE_OPTIMIZATION_CHECKLIST.md  YC_DEADLINE_ROADMAP.md
docs/plans/: .gitkeep
scripts/: latency_test.py  test_call.py
src/: __init__.py
src/api/: server.py
src/dashboard_agent/: __init__.py  streamlit_app.py  streamlit_db.py
tests/: test_database.py  test_voice_agent.py
web-dashboard/: package-lock.json  package.json
(+37 files in other folders)
